Add multi surface/layer notification test to build

--- a/ivi-layermanagement-api/test/CMakeLists.txt
+++ b/ivi-layermanagement-api/test/CMakeLists.txt
@@ -57,6 +57,7 @@ IF(BUILD_ILM_API_TESTS)
         TestBase.cpp
         ilm_control_test.cpp
         ilm_control_notification_test.cpp
+        ilm_control_multi_notification_test.cpp
     )
 
     ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_FILES})
