Add null pointer test to build

--- a/ivi-layermanagement-api/test/CMakeLists.txt
+++ b/ivi-layermanagement-api/test/CMakeLists.txt
@@ -61,6 +61,7 @@ IF(BUILD_ILM_API_TESTS)
         ilm_control_notification_test.cpp
         ilm_control_multi_test.cpp
         ilm_min_max_invalid_test.cpp
+        ilm_null_pointer_test.cpp
     )
 
     ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_FILES})
